[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hyve"
version = "0.0.1"
description = "Interactive and static 3D visualisation for functional brain mapping"
authors = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
maintainers = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.10"
dependencies = [
    "conveyant",
    "lytemaps",
    "matplotlib",
    "nibabel",
    "numpy",
    "pandas",
    "pkg_resources",
    "pyvista",
    "scipy",
    "templateflow",
    "trame",
    "trame-vtk",
]

[project.urls]
"Homepage" = "https://github.com/hypercoil/hyve"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.run]
branch = true
omit = [
    '*test*',
    '*__init__*',
]

[tool.ruff]
ignore = []
line-length = 79
select = [
    "E",
    "F",
    "W",
    "I001",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
